add routes to swagger file
